--- a/src/playground/index.html
+++ b/src/playground/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ezno Playground</title>
     <link rel="stylesheet" href="assets/index.css">
-    <meta property="twitter:image" content="./assets/banner.svg">
-    <meta property="og:image" content="./assets/banner.svg">
-    <link rel="icon" href="./assets/ezno.svg">
+    <meta property="twitter:image" content="assets/banner.png">
+    <meta property="og:image" content="assets/banner.png">
+    <link rel="icon" href="assets/ezno.svg">
 </head>
 
 <body>
     <header>
-        <img src="./assets/ezno.svg" alt="EZNO" height="40px">
+        <img src="assets/ezno.svg" alt="EZNO" height="40px">
         <p>
             Playground for the Ezno type checker. See what Ezno supports <a
                href="https://github.com/kaleidawave/ezno/blob/main/checker/specification/specification.md">in its
